# zk-snap-backend-actix

./: .gitignore  Cargo.toml
aggregator/: Cargo.toml
aggregator/src/: main.rs
aggregator/src/app/: aggregator_controller.rs  aggregator_service.rs  consumer.rs  dtos.rs  init.rs  mod.rs  routes.rs  utils.rs
src/: main.rs
src/app/: config.rs  init.rs  mod.rs  routes.rs
src/app/controllers/: dao_controller.rs  mod.rs  proposal_controller.rs
src/app/dtos/: aggregator_request_dto.rs  dao_dto.rs  dummy_vote_request.rs  mod.rs  proposal_dto.rs
src/app/entities/: dao_entity.rs  mod.rs  proposal_entity.rs
src/app/repository/: generic_repository.rs  mod.rs  repository.rs  traits.rs
src/app/services/: dao_service.rs  mod.rs  proposal_service.rs
src/app/utils/: index_merkle_tree_helper.rs  merkle_tree_helper.rs  mod.rs  nullifier_helper.rs  parse_string_pub_key.rs
tests/: dao_controller_test.rs
voter/: Cargo.toml
voter/src/: main.rs
voter/src/app/: dtos.rs  mod.rs  routes.rs  utils.rs  voter_controller.rs  voter_service.rs
zk-snap-backend/: Cargo.toml
zk-snap-backend/src/: main.rs
zk-snap-backend/src/app/: config.rs  init.rs  mod.rs  routes.rs
zk-snap-backend/src/app/controllers/: dao_controller.rs  proposal_controller.rs
zk-snap-backend/src/app/dtos/: aggregator_request_dto.rs  dao_dto.rs  mod.rs  proposal_dto.rs  witness_dto.rs
zk-snap-backend/src/app/entities/: dao_entity.rs  proposal_entity.rs
zk-snap-backend/src/app/repository/: generic_repository.rs  mod.rs  traits.rs
zk-snap-backend/src/app/services/: dao_service.rs  proposal_service.rs
zk-snap-backend/src/app/utils/: generate_witness.rs  index_merkle_tree_helper.rs  merkle_tree_helper.rs  mod.rs  parse_string_pub_key.rs
zk-snap-backend/tests/: dao_controller_test.rs
