[package]
name = "zk-snap-backend-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.0"
dotenv = "0.15"
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }

